objects/ssot__AiAgentInteractionStep__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentInteractionId__c</fullName>
        <label>AI Agent Interaction</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentInteractionStepType__c</fullName>
        <label>Ai Agent Interaction Step Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AttributeText__c</fullName>
        <label>Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndTimestamp__c</fullName>
        <label>End Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorMessageText__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenAiGatewayRequestId__c</fullName>
        <label>Gen AI Gateway Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenAiGatewayResponseId__c</fullName>
        <label>Gen AI Gateway Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenerationId__c</fullName>
        <label>Generation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Interaction Step Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InputValueText__c</fullName>
        <label>Input Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutputValueText__c</fullName>
        <label>Output Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostStepVariableText__c</fullName>
        <label>Post-step Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreStepVariableText__c</fullName>
        <label>Pre-step Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrevStepId__c</fullName>
        <label>Previous Step</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartTimestamp__c</fullName>
        <label>Start Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TelemetryTraceSpanId__c</fullName>
        <label>Telemetry Trace Span</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306614954_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentInteractionStep_AiAgentIntera_rel</label>
        <referenceTo>ssot__AiAgentInteraction__dlm</referenceTo>
        <relationshipLabel>AiAgentInteractionStep_AiAgentIntera_rel</relationshipLabel>
        <relationshipName>rel_1744306614954_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306621036_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentInteractionStep_PrevStepId_ma_rel</label>
        <referenceTo>ssot__AiAgentInteractionStep__dlm</referenceTo>
        <relationshipLabel>AiAgentInteractionStep_PrevStepId_ma_rel</relationshipLabel>
        <relationshipName>rel_1744306621036_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306684495_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentInteractionStep_TelemetryTrac_rel</label>
        <referenceTo>ssot__TelemetryTraceSpan__dlm</referenceTo>
        <relationshipLabel>AiAgentInteractionStep_TelemetryTrac_rel</relationshipLabel>
        <relationshipName>rel_1744306684495_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>